# Gesture-Based-Interface-for-Baxter-Robot

./: .gitmodules
Beacons/: build.gradle
Beacons/app/: build.gradle
Beacons/app/src/main/: AndroidManifest.xml
Beacons/gradle/wrapper/: gradle-wrapper.properties
BeaconsProximity/: README.md  local.properties
BeaconsProximity/gradle/wrapper/: gradle-wrapper.properties
BeaconsProximity/wear/: build.gradle
BeaconsProximity/wear/src/main/: AndroidManifest.xml
MyApplication/app/: build.gradle
MyApplication/gradle/wrapper/: gradle-wrapper.properties
RosJavaApp/: build.gradle  local.properties  package.xml  read.txt  settings.gradle
RosJavaApp/RosAndroid/: build.gradle
RosJavaApp/RosAndroid/src/main/: AndroidManifest.xml
RosJavaApp/RosAndroid/src/main/java/com/github/rosjava/android/RosApp/: Listener.java  MainActivity.java  Talker.java
RosJavaApp/RosAndroid/src/main/res/values/: strings.xml
RosJavaApp/gradle/wrapper/: gradle-wrapper.properties
android_core/: build.gradle
android_core/android_wear_pub/: AndroidManifest.xml
beacons_presence_scanner/: CMakeLists.txt  package.xml
beacons_presence_scanner/launch/: beacon.launch
beacons_presence_scanner/src/: beacons_scanner.cpp
beacons_proximity_pub/: settings.gradle
beacons_transforms/: CMakeLists.txt  package.xml
beacons_transforms/src/: beacon_broadcaster.cpp
rosjava/devel/: .catkin  .rosinstall  setup.sh
rosjava/src/: .rosinstall
rosjava/src/android_core/: settings.gradle
rosjava/src/rosjava_catkin_package_a/: build.gradle  settings.gradle
(+375 files in other folders)
