<?xml version="1.0"?>
<package format="2">
  <name>RosApp</name>
  <version>0.1.0</version>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
